# Stowdoku

./: .gitignore  CLAUDE.md  CSP_Planning.py  CSP_solver.py  README.md  VesselClass.py  build_dataset.py  main.py  pyproject.toml  requirements.txt  test.json  test_data_1.json  test_data_2.json  test_data_3.json  test_data_4.json
.claude/: settings.json
debug/: tail_diag_host.py  tail_diag_host_real_data.py  tail_diag_ordering.py  tail_diag_source3_double_count.py  tail_new_old.py  tail_real_run.py  tail_real_run_new_scheme.py  tail_wraparound_scenario.py  test_VesselCass.py  test_parse_ASC.py  test_vessel_geometry.py  verify_20ft_relabel.py  verify_cbf_with_20.py  verify_cross_pol_is_hc_stability.py  verify_hc_quota_and_conservation.py  verify_n1_stack_quota.py  verify_settle_row_ledger.py  verify_tail_retrofit_e2e.py
debug/fixtures/: tail_fixture.pkl
service/: codes.py  errorcodes.py  run_orchestrator.py  service_api_design.md  storage.py  translator.py  upstream-contract-snapshot.md
service/tests/: test_codes.py  test_errorcodes.py  test_run_orchestrator.py  test_translator.py
storage/runs/RUN-TEST-ORCH-8245/: index.json
storage/runs/RUN-TEST-ORCH-8245/plans/DLC/: result.json
storage/runs/RUN-TEST-ORCH-8245/plans/NGO/: result.json
storage/runs/RUN-TEST-ORCH-8245/plans/SHP/: result.json
storage/runs/RUN-TEST-ORCH-8245/plans/TXG/: result.json
storage/runs/RUN-TEST-ORCH-8245/plans/TYO/: result.json
storage/runs/RUN-TEST-ORCH-8245/plans/YKK/: result.json
utils/: dataset.py  evaluate.py  tail.py  vessel.py  vessel_io.py  viz.py
(+1 files in other folders)
