[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "stowdoku"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.2.0",
    "numpy>=2.0.0",
    "matplotlib>=3.8.0",
]

[tool.setuptools.packages.find]
exclude = ["data*", "debug*"]